--- a/template/hel.html
+++ b/template/hel.html
@@ -3,7 +3,7 @@
 <head>
           <title></title>
             <link href ="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap" rel="stylesheet">
-           <link rel ="stylesheet" type = "text/css"  href ="test.css">
+          
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 .heads{
@@ -27,7 +27,7 @@
 .other{
     flex-direction : row;
     display: flex;
-    margin-left: 40px;
+    margin-left: 10px;
     margin-top: 30px;
     color:#ddd8d8;
     font-family:monospace
@@ -55,7 +55,7 @@ body{
 .ok{
     background:#75717a3b;
     width:200px;
-    padding:50px;
+    padding:20px 40px;
     margin-left:0px;
     margin-top:20px;
     border-radius:30px;
@@ -66,11 +66,15 @@ body{
     backgroun: #c73a64;  
     background:linear-gradient(to left, #d10924, #c12290);  
     width: 100%;
-    height:100vh;
+    height:150vh;
     
    
 }
 
+p{
+color : white;
+margin-top:20px;
+}
 
 input{
     width:70%;
@@ -164,6 +168,7 @@ Contact </a>
 </div>
   
 <div class="mains">
+<p> Keep your Mental Health on check :)</p>
 <div class="photo">
 
 </div>
@@ -192,9 +197,12 @@ Feel anxious/depressed: (yes:1,No:0)
            <input type="submit" , value='Result!' >
         </form>
 
-</div>
-</div>
 
+
+</div>
+</div>
+<p>By Dikshita Basu</p>
  </div >
+
 </body>
 </html>
