--- a/template/hel.html
+++ b/template/hel.html
@@ -183,7 +183,7 @@ Age:
 Body Issue: (yes:1,No:0)
 <br> <input type="text", name='b', placeholder="enter 2"> <br><br>
 
-low esteem: (yes:1,No:0)
+low self esteem: (yes:1,No:0)
 <br> <input type="text", name='c', placeholder="enter 3"> <br><br>
 
 Are you happy? : (yes:0,No:1) 
