--- a/template/index.html
+++ b/template/index.html
@@ -36,7 +36,7 @@ body {
 .other{
     flex-direction : row;
     display: flex;
-    margin-left: 60px;
+    margin-left: 10px;
     margin-top: 30px;
     color:#ddd8d8;
     font-family:monospace
@@ -51,7 +51,7 @@ body {
 }
 
 .w{
-padding:30px;
+padding:0 30px;
 }
 .w h1{
 color:#ff790a;
@@ -61,7 +61,7 @@ color:#ff790a;
   text-transform: uppercase;
   font-size:25px;
   font-weight:bold;
-  padding-top:20px;  
+  padding-top:10px;  
   width:100%;
   bottom:45%;
   display:block;
@@ -108,10 +108,10 @@ color:#ff790a;
 p {
   position:fixed;
   width:100%;
-  bottom:30px;
+  bottom:10px;
   font-size:12px;
   color:#999;
-  margin-top:200px;
+
   font-family:monospace
 }
 
@@ -121,20 +121,7 @@ p {
 
 }
 
-.photo{
-margin-top:50px;
-}
-img{
-  width:150px;
-  border-radius:50%;
-  border:1.5px solid #ff790a66;
-  padding:10px;
-}
 
-.photo1 img{
-  width:0px;
-   border:0px;
-}
 
 .ok{
   padding:15px 30px;
