--- a/template/hel.html
+++ b/template/hel.html
@@ -181,7 +181,8 @@ Age:
 <br> <input type="text", name='a', placeholder="enter 1"> <br><br>
 
 Body Issue: (yes:1,No:0)
-<br> <input type="text", name='b', placeholder="enter 2"> <br><br>
+<br> <INPUT TYPE="radio" NAME="b" VALUE="1">Yes
+<INPUT TYPE="radio" NAME="b" VALUE="0">No <br><br>
 
 low self esteem: (yes:1,No:0)
 <br> <input type="text", name='c', placeholder="enter 3"> <br><br>
